@@ -23,6 +23,7 @@ export(getSmoothContour)
 export(getSpectralEnvelope)
 export(matchPars)
 export(modulationSpectrum)
+export(modulationSpectrumFolder)
 export(morph)
 export(optimizePars)
 export(osc_dB)
